# lf-demo-app

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  openai_client.py
tests/: test_cli.py  test_openai_client.py
